adding first journal week

--- a/src/pages/journal/2020/week-1.mdx
+++ b/src/pages/journal/2020/week-1.mdx
@@ -2,9 +2,83 @@
 date: "2020-01-01"
 title: "Week 1"
 tags: ['this, that']
-excerpt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+excerpt: "With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom."
 ---
 
-# Week 1!!
+# Week 1
 
-What a crazy week! We're on the first week of 2020!
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+
+<div style={{ marginBottom: '80px'}}></div>
+
+<iframe width="180" height="180" src="https://www.youtube.com/embed/5q_dOOMHeaw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# Ali Nasser - The Way Out
+
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+
+Support the artist and label:
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+<div style={{ marginBottom: '80px'}}></div>
+
+<iframe width="180" height="180" src="https://www.youtube.com/embed/6PZGDS1fR8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# Leafar Legov - Alone
+
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+
+Support the artist and label:
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+<div style={{ marginBottom: '80px'}}></div>
+
+<iframe width="180" height="180" src="https://www.youtube.com/embed/IH9p8D8bcMo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# Ron Tom - Give Me da Weed
+
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+
+Support the artist and label:
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+<div style={{ marginBottom: '80px'}}></div>
+
+<iframe width="180" height="180" src="https://www.youtube.com/embed/z78Pc_m74ys" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# dot13 - Mineral Jam 
+
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+
+Support the artist and label:
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+<div style={{ marginBottom: '80px'}}></div>
