fixing a lot shit

--- a/src/pages/journal/2020/week-1.mdx
+++ b/src/pages/journal/2020/week-1.mdx
@@ -1,17 +1,21 @@
 ---
 date: "2020-01-01"
 title: "Week 1"
-tags: ['this, that']
+tags: ["this, that"]
 excerpt: "With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom."
 ---
 
 # Week 1
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/5q_dOOMHeaw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/5q_dOOMHeaw"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Ali Nasser - The Way Out
 
@@ -25,11 +29,15 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-[I'm an inline-style link](https://www.google.com)
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/6PZGDS1fR8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/6PZGDS1fR8M"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Leafar Legov - Alone
 
@@ -43,11 +51,15 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-[I'm an inline-style link](https://www.google.com)
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/IH9p8D8bcMo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/IH9p8D8bcMo"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Ron Tom - Give Me da Weed
 
@@ -61,13 +73,17 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-[I'm an inline-style link](https://www.google.com)
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/z78Pc_m74ys"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/z78Pc_m74ys" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-# dot13 - Mineral Jam 
+# dot13 - Mineral Jam
 
 With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
 
@@ -81,4 +97,4 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-<div style={{ marginBottom: '80px'}}></div>
+<div style={{ marginBottom: "80px" }} />
