--- a/src/pages/journal/2020/week-2.mdx
+++ b/src/pages/journal/2020/week-2.mdx
@@ -1,17 +1,21 @@
 ---
 date: "2020-10-01"
 title: "Week 2"
-tags: ['this, that']
+tags: ["this, that"]
 excerpt: "With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom."
 ---
 
 # Week 2
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/741400516&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  scrolling="no"
+  frameborder="no"
+  allow="autoplay"
+  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/741400516&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+></iframe>
 
 # TANK mix: Malibu
 
@@ -19,17 +23,18 @@ With a chronic shortage of honesty in public discourse, it fell to artists such 
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/qtSJA_U4W1U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+- [I'm an inline-style link](https://www.google.com)
+- [I'm an inline-style link](https://www.google.com)
+- [I'm an inline-style link](https://www.google.com)
+- [I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/qtSJA_U4W1U"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Squarepusher – Nervelevers
 
@@ -43,11 +48,15 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-[I'm an inline-style link](https://www.google.com)
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/4F-tzMJfAFs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/4F-tzMJfAFs"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Konduku - White Heron
 
@@ -61,11 +70,15 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-[I'm an inline-style link](https://www.google.com)
-
-<div style={{ marginBottom: '80px'}}></div>
-
-<iframe width="180" height="180" src="https://www.youtube.com/embed/e7bkcY3SUIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+<iframe
+  width="180"
+  height="180"
+  src="https://www.youtube.com/embed/e7bkcY3SUIA"
+  frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 # Recondite - Nobillia
 
@@ -81,4 +94,4 @@ Support the artist and label:
 
 [I'm an inline-style link](https://www.google.com)
 
-<div style={{ marginBottom: '80px'}}></div>
+<div style={{ marginBottom: "80px" }} />
