updating journal copy

--- a/src/pages/journal/2020/week-2.mdx
+++ b/src/pages/journal/2020/week-2.mdx
@@ -8,6 +8,7 @@ excerpt: "With a chronic shortage of honesty in public discourse, it fell to art
 # Week 2
 
 With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
@@ -23,10 +24,14 @@ With a chronic shortage of honesty in public discourse, it fell to artists such 
 
 Support the artist and label:
 
-- [I'm an inline-style link](https://www.google.com)
-- [I'm an inline-style link](https://www.google.com)
-- [I'm an inline-style link](https://www.google.com)
-- [I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)
+
+[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
@@ -49,6 +54,7 @@ Support the artist and label:
 [I'm an inline-style link](https://www.google.com)
 
 [I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
@@ -71,6 +77,7 @@ Support the artist and label:
 [I'm an inline-style link](https://www.google.com)
 
 [I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
