adding first 2 weeks of journal

--- a/src/pages/journal/2020/week-1.mdx
+++ b/src/pages/journal/2020/week-1.mdx
@@ -2,12 +2,13 @@
 date: "2020-01-01"
 title: "Week 1"
 tags: ["this, that"]
-excerpt: "With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom."
+excerpt: "First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :)"
 ---
 
 # Week 1
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.<div style={{ marginBottom: "80px" }} />
+First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :)<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
@@ -19,17 +20,23 @@ With a chronic shortage of honesty in public discourse, it fell to artists such 
 
 # Ali Nasser - The Way Out
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+I found this new artist while digging through the amazing storytellers YouTube channel. Fine minmal house which you can’t listen only once!
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
+<div style={{ lineHeight: '0px'}}>
 
-[I'm an inline-style link](https://www.google.com)
+[Deejay.de](https://www.deejay.de/Ali_Nasser_The_Way_Out_EP_PLZ000_Vinyl__930333)
 
-[I'm an inline-style link](https://www.google.com)
+[Decks.de](https://www.decks.de/track/ali_nasser-the_way_out_ep/cem-5w)
 
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+[Yoyaku](https://www.yoyaku.io/release/plz000/?fbclid=IwAR1oGobCALoTzOYVlVm7ttIcY6vt2WM4hV4vQW7pkJ7HhbOF6LIL4F6oLTc)
+
+[Juno](https://www.juno.co.uk/products/ali-nasser-the-way-out-ep/728290-01/)
+
+</div>
+<div style={{ marginBottom: "80px" }} />
+
 <iframe
   width="180"
   height="180"
@@ -41,17 +48,13 @@ Support the artist and label:
 
 # Leafar Legov - Alone
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+One of the tracks I’ve had on my repeat during my holiday break. Leafar Legov does it once again with some 2020 disco. Alone, Alone, Alone…
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
+[Sold out -> Discogs sharks](https://www.discogs.com/Various-2019/release/14545885)
+<div style={{ marginBottom: "80px" }} />
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
 <iframe
   width="180"
   height="180"
@@ -63,17 +66,13 @@ Support the artist and label:
 
 # Ron Tom - Give Me da Weed
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+Some fine old school jungle from 1995, a hidden gem!
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
+[Sold out -> Discogs sharks](https://www.discogs.com/Ron-Tom-Give-Me-Da-Weed-Pirates/release/230846)
+<div style={{ marginBottom: "80px" }} />
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
 <iframe
   width="180"
   height="180"
@@ -85,16 +84,14 @@ Support the artist and label:
 
 # dot13 - Mineral Jam
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+Dot13 is a young Romanian artist currently living in Vienna, Austria. He’s trying to pursue his dream of becoming a music producer. His sound is set in a modern post-minimal scenario with a funky-groove twist. This track will take you on a 11 minute trip!
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
+[Decks.de](https://www.decks.de/track/dot13-dumitru_prunariu/cfv-f7)
 
-[I'm an inline-style link](https://www.google.com)
+[Juno](https://www.juno.co.uk/products/dot13-dumitru-prunariu/757609-01/?fbclid=IwAR3zTBvF2buQKd6wGUtfaTOHJKGW_xauwhb8TIB4Row9AA0xPvI7uK9-iHU)
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
+[Discogs](https://www.discogs.com/dot13-Dumitru-Prunariu/release/14496382?fbclid=IwAR1pN48bjFATmFCcSIjbpTLtQRk3DDDrv7fc_zK8SPYCTbjJphWzqXYv1K8)
 
 <div style={{ marginBottom: "80px" }} />
