--- a/src/pages/journal/2020/week-2.mdx
+++ b/src/pages/journal/2020/week-2.mdx
@@ -2,12 +2,12 @@
 date: "2020-10-01"
 title: "Week 2"
 tags: ["this, that"]
-excerpt: "With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom."
+excerpt: "A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite"
 ---
 
 # Week 2
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.<div style={{ marginBottom: "80px" }} />
+A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
@@ -20,17 +20,11 @@ With a chronic shortage of honesty in public discourse, it fell to artists such 
 
 # TANK mix: Malibu
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+Back in December 2019 I saw Malibu perform a liveset in De School. It was one of the most intense experiences I’ve had with music before. This 30 minute ambient set will let you feel something like that.
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+[Malibu - One Life](https://mmmmalibu.bandcamp.com/album/one-life-2)<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
@@ -43,17 +37,11 @@ Support the artist and label:
 
 # Squarepusher – Nervelevers
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+Squarepusher is back! His new album ‘Be Up A Hello’ will be released on 31 January. After a five year break this is the Squarepusher how he used to be, fine vintage hardware sounds from the 90’s.
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+[Bleep](https://bleep.com/release/156702-squarepusher-be-up-a-hello)<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
@@ -66,17 +54,11 @@ Support the artist and label:
 
 # Konduku - White Heron
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+During ADE I saw Konduku playing during Breakfast club. He plays one of the best odd-groove based techno. This album will show a glimp of that, sounds of snappy blips with mesmerising depth.
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)<div style={{ marginBottom: "80px" }} />
+[Bandcamp](https://nousklaer.bandcamp.com/album/white-heron)<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
@@ -89,16 +71,10 @@ Support the artist and label:
 
 # Recondite - Nobillia
 
-With a chronic shortage of honesty in public discourse, it fell to artists such as Slowthai, Stormzy and Kano to speak truth to power, and give much needed voices to those disenfranchised by racial prejudice, austerity and inequality in the United Kingdom.
+Recondite is back with a new album, the electronic musician from Germany will release his first album since five years. The track Nobilia will give you a glimp of that, a down tempo track with howling sounds.
 
 Support the artist and label:
 
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link](https://www.google.com)
+[Bandcamp](https://recondite-music.bandcamp.com/)
 
 <div style={{ marginBottom: "80px" }} />
