--- a/src/pages/journal/2020/week-1.mdx
+++ b/src/pages/journal/2020/week-1.mdx
@@ -1,13 +1,13 @@
 ---
 date: "2020-01-01"
 title: "Week 1"
-tags: ["this, that"]
-excerpt: "First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :)"
+tags: ["Ali Nasser, Leafar Legov, Ron Tom, Giegling"]
+excerpt: "First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :)."
 ---
 
 # Week 1
 
-First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :)<div style={{ marginBottom: "80px" }} />
+First week of my listening journal, woo! This week contains some music of the stuff I’ve had on repeat while working on this website. You’ll find some of the best (deep) house, emotional sounds from Leafar Legov and even some mind-blowing Jungle! Dig in :).<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
