--- a/src/pages/journal/2020/week-2.mdx
+++ b/src/pages/journal/2020/week-2.mdx
@@ -1,13 +1,13 @@
 ---
-date: "2020-10-01"
+date: "2020-01-10"
 title: "Week 2"
-tags: ["this, that"]
-excerpt: "A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite"
+tags: ["Malibu, Squarepusher, Konduku, Warp, Nous'klaer"]
+excerpt: "A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku."
 ---
 
 # Week 2
 
-A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite<div style={{ marginBottom: "80px" }} />
+A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku.<div style={{ marginBottom: "80px" }} />
 
 <iframe
   width="180"
@@ -20,7 +20,7 @@ A lot of different styles in this week. It starts with half an hour ambient from
 
 # TANK mix: Malibu
 
-Back in December 2019 I saw Malibu perform a liveset in De School. It was one of the most intense experiences I’ve had with music before. This 30 minute ambient set will let you feel something like that.
+Back in December 2019 I saw Malibu perform a liveset in De School. It was one of the most intense experiences I’ve had with music ever. This 30 minute ambient set will let you feel something like that.
 
 Support the artist and label:
 
@@ -44,13 +44,14 @@ Support the artist and label:
 [Bleep](https://bleep.com/release/156702-squarepusher-be-up-a-hello)<div style={{ marginBottom: "80px" }} />
 
 <iframe
-  width="180"
-  height="180"
-  src="https://www.youtube.com/embed/4F-tzMJfAFs"
-  frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
+  style="border: 0; width: 180px; height: 180px;"
+  src="https://bandcamp.com/EmbeddedPlayer/album=954903777/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
+  seamless
+>
+  <a href="http://nousklaer.bandcamp.com/album/white-heron">
+    White Heron by Konduku
+  </a>
+</iframe>
 
 # Konduku - White Heron
 
@@ -59,22 +60,3 @@ During ADE I saw Konduku playing during Breakfast club. He plays one of the best
 Support the artist and label:
 
 [Bandcamp](https://nousklaer.bandcamp.com/album/white-heron)<div style={{ marginBottom: "80px" }} />
-
-<iframe
-  width="180"
-  height="180"
-  src="https://www.youtube.com/embed/e7bkcY3SUIA"
-  frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
-
-# Recondite - Nobillia
-
-Recondite is back with a new album, the electronic musician from Germany will release his first album since five years. The track Nobilia will give you a glimp of that, a down tempo track with howling sounds.
-
-Support the artist and label:
-
-[Bandcamp](https://recondite-music.bandcamp.com/)
-
-<div style={{ marginBottom: "80px" }} />
