improving paddign and adding week 3

--- a/src/pages/journal/2020/week-3.mdx
+++ b/src/pages/journal/2020/week-3.mdx
@@ -2,59 +2,59 @@
 date: "2020-01-17"
 title: "Week 3"
 tags: ["this, that"]
-excerpt: "A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite"
+excerpt: "This week contains new music by Shanti Celeste, a mind-blowing remix by Voiski, a lovely selection by Martyn on the Ilian Tape Podcast Series and some lush soundscapes by Mikron."
 ---
 
 # Week 3
 
-A lot of different styles in this week. It starts with half an hour ambient from the amazing Malibu. It’ll then take you on some 175 bpm breaks with a lot of acid, and will put you then back on earth with fresh sounds from Konduku and Recondite<div style={{ marginBottom: "80px" }} />
+This week contains new music by Shanti Celeste, a mind-blowing remix by Voiski, a lovely selection by Martyn on the Ilian Tape Podcast Series and some lush soundscapes by Mikron.<div style={{ marginBottom: "80px" }} />
 
 <iframe
-  width="180"
-  height="180"
+  style="border: 0; width: 180px; height: 180px;"
+  src="https://bandcamp.com/EmbeddedPlayer/album=2115870752/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=979704123/transparent=true/"
+  seamless
+>
+  <a href="http://shop.cpurecords.net/album/severance">Severance by Mikron</a>
+</iframe>
+
+# Mikron - Ghost Node
+
+Mikron released one of the best electronic albums of 2019 on Central Processing Unit. The whole EP is worth diving in, but Ghost Node is an absolute beauty on this one.
+
+Support the artist and label:
+
+[Sold out -> Discogs sharks](https://www.discogs.com/Mikron-Severance/release/13037142)<div style={{ marginBottom: "80px" }} />
+
+<iframe
+  style="border: 0; width: 180px; height: 180px;"
+  src="https://bandcamp.com/EmbeddedPlayer/album=2097810011/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=2762102918/transparent=true/"
+  seamless
+>
+  <a href="http://lobstertheremin.com/album/timeframe-ep">
+    Timeframe EP by Shedbug
+  </a>
+</iframe>
+
+# Shedbug - Timeframe (Voiski Remix)
+
+Hard hitting remix from Voiski! Be sure to also check out the great tracks by Shedbug.
+
+Support the artist and label:
+
+[Bandcamp](https://lobstertheremin.com/album/timeframe-ep)<div style={{ marginBottom: "80px" }} />
+
+<iframe
+  width="180px"
+  height="180px"
   scrolling="no"
   frameborder="no"
   allow="autoplay"
-  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/741400516&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/743779036&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
 ></iframe>
 
-# TANK mix: Malibu
+# ITPS047 MARTYN
 
-Back in December 2019 I saw Malibu perform a liveset in De School. It was one of the most intense experiences I’ve had with music before. This 30 minute ambient set will let you feel something like that.
-
-Support the artist and label:
-
-[Malibu - One Life](https://mmmmalibu.bandcamp.com/album/one-life-2)<div style={{ marginBottom: "80px" }} />
-
-<iframe
-  width="180"
-  height="180"
-  src="https://www.youtube.com/embed/qtSJA_U4W1U"
-  frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
-
-# Squarepusher – Nervelevers
-
-Squarepusher is back! His new album ‘Be Up A Hello’ will be released on 31 January. After a five year break this is the Squarepusher how he used to be, fine vintage hardware sounds from the 90’s.
-
-Support the artist and label:
-
-[Bleep](https://bleep.com/release/156702-squarepusher-be-up-a-hello)<div style={{ marginBottom: "80px" }} />
-
-<iframe
-  width="180"
-  height="180"
-  src="https://www.youtube.com/embed/4F-tzMJfAFs"
-  frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
-
-# Konduku - White Heron
-
-During ADE I saw Konduku playing during Breakfast club. He plays one of the best odd-groove based techno. This album will show a glimp of that, sounds of snappy blips with mesmerising depth.
+Fantastic mix by Martyn on Ilian Tape, this will keep your workday going for sure!
 
 Support the artist and label:
 
@@ -63,18 +63,18 @@ Support the artist and label:
 <iframe
   width="180"
   height="180"
-  src="https://www.youtube.com/embed/e7bkcY3SUIA"
+  src="https://www.youtube.com/embed/4LBoIUUZqB4"
   frameborder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
 
-# Recondite - Nobillia
+# MJ Cole - Dizzy New Heights (Shanti Celeste Remix)
 
-Recondite is back with a new album, the electronic musician from Germany will release his first album since five years. The track Nobilia will give you a glimp of that, a down tempo track with howling sounds.
+New project by MJ COLE where he has been working on for the past 20 years (!!!). He will be doing things differently this time, by first releasing remixes of the tracks. The first one is an incredible remix of Shanti Celeste.
 
 Support the artist and label:
 
-[Bandcamp](https://recondite-music.bandcamp.com/)
+[Juno](https://www.junodownload.com/products/mj-cole-dizzy-new-heights-shanti-celeste/4406654-02/)
 
 <div style={{ marginBottom: "80px" }} />
