improving about on mobile

--- a/src/pages/journal/2020/week-3.mdx
+++ b/src/pages/journal/2020/week-3.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2020-01-17"
 title: "Week 3"
-tags: ["this, that"]
+tags: ["Mikron, Shedbug, Voiski, Martyn, MJ Cole, Shanti Celeste"]
 excerpt: "This week contains new music by Shanti Celeste, a mind-blowing remix by Voiski, a lovely selection by Martyn on the Ilian Tape Podcast Series and some lush soundscapes by Mikron."
 ---
 
