adding copy for week 4

--- a/src/pages/journal/2020/week-4.mdx
+++ b/src/pages/journal/2020/week-4.mdx
@@ -21,7 +21,7 @@ Last week of January! This week contains only new releases. It has some mind-ben
 
 # Massage Brain Cult - √∆1
 
-copy
+Mind-bending braindance and interesting rhythms on this one
 
 Support the artist and label:
 
@@ -39,7 +39,7 @@ Support the artist and label:
 
 # De Stijl 02
 
-copy
+The second release on De Stijl contains four different tracks by various producers. Be sure to checkout Korridor his track which will transport you to another place.
 
 Support the artist and label:
 
@@ -57,7 +57,7 @@ Support the artist and label:
 
 # Aquarian – The Snake That Eats Itself
 
-copy
+Nearly five years in the making, it’s Aquarian’s most complex and diverse work to date.
 
 Support the artist and label:
 
@@ -74,7 +74,7 @@ Support the artist and label:
 
 # Phase Fatale - Scanning Backwards
 
-copy
+Phase Fatale’s second full-length album is using a connection between weaponized sound and psychological manipulation.
 
 Support the artist and label:
 
@@ -92,7 +92,7 @@ Support the artist and label:
 
 # Credit 00 - Beats For The Streets EP
 
-copy
+Merciless machine funk, haunting soundscapes and rugged electro styles.
 
 Support the artist and label:
 
