fixing typo week 4

--- a/src/pages/journal/2020/week-4.mdx
+++ b/src/pages/journal/2020/week-4.mdx
@@ -96,6 +96,6 @@ Merciless machine funk, haunting soundscapes and rugged electro styles.
 
 Support the artist and label:
 
-[Bandcamp](https://phasefatale.bandcamp.com/album/scanning-backwards)
+[Bandcamp](https://mechatronica.bandcamp.com/album/beats-for-the-streets-ep)
 
 <div style={{ marginBottom: "80px" }} />
