--- a/src/pages/journal/2020/week-4.mdx
+++ b/src/pages/journal/2020/week-4.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2020-01-24"
 title: "Week 4"
-tags: ["this, that"]
+tags: ["Massage Brain Cult, Korridor, Aquarian, Phase Fatale, Credit 00"]
 excerpt: "Last week of January! This week contains only new releases. It has some mind-bending braindance on a new compilation from Massage Brain Cult. De Stijl has released its second EP, and it already contains one of the best ambient tracks this year by Korridor. Aquarian released his first album on Beduoin Records, hard-hitting EBM by Phase Fatale and some lush electro by Credit 00."
 ---
 
