fixing typo in week 5

--- a/src/pages/journal/2020/week-5.mdx
+++ b/src/pages/journal/2020/week-5.mdx
@@ -23,6 +23,8 @@ While we’re saying goodbye to the first month of 2020, I’ll show you another
 
 DJ Lostboi and Torus split album covers four tracks from each artist. Each composition reveals a discrete chapter of DJ Lostboi and Torus’ journey building to a moment of bittersweet ascension.
 
+Support the artist and label:
+
 [Bandcamp](https://sitequeeste.bandcamp.com/album/the-flash)<div style={{ marginBottom: "80px" }} />
 
 <iframe
@@ -36,6 +38,8 @@ DJ Lostboi and Torus split album covers four tracks from each artist. Each compo
 # Anunaku - Stargate EP
 
 After a stunning debut EP on Whities, Anunaku (aka TSVI) is back with three tracks exploring different parts of the drum spectrum.
+
+Support the artist and label:
 
 [Bandcamp](https://3024world.com/album/stargate-ep)<div style={{ marginBottom: "80px" }} />
 
