--- a/src/pages/journal/2020/week-7.mdx
+++ b/src/pages/journal/2020/week-7.mdx
@@ -5,23 +5,15 @@ tags: ["Horizontal Phase, Eris Drew, Rrose, Silent Servant, RX-101"]
 excerpt: "Sending out love with another week of fresh music. I’ve stumbled across a release by a completely unknown artist called Horizontal Phase, it’s definitely my favorite music of this week. Other stuff includes a debut solo release from Eris Drew, Rrose & Silent Servant combined forces on a diverse compilation and RX-101 brings you back into vintage-Rephlex sounds from 1995."
 ---
 
-import { Iframe } from "../../../components/Iframe"
-
 # Week 7
 
 Sending out love with another week of fresh music. I’ve stumbled across a release by a completely unknown artist called Horizontal Phase, it’s definitely my favorite music of this week. Other stuff includes a debut solo release from Eris Drew, Rrose & Silent Servant combined forces on a diverse compilation and RX-101 brings you back into vintage-Rephlex sounds from 1995.<span style={{ display: 'block', marginBottom: "80px" }} />
 
-<Iframe src="https://bandcamp.com/EmbeddedPlayer/album=1945028578/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" />
-
-<!-- <iframe
-  style="border: 0; width: 180px; height: 180px;"
-  src=""
-  seamless
->
+<iframe style="border: 0; width: 180px; height: 180px;" src="" seamless>
   <a href="http://conradpack.bandcamp.com/album/horizontal-phase">
     Horizontal Phase by Horizontal Phase
   </a>
-</iframe> -->
+</iframe>
 
 # Horizontal Phase - Horizontal Phase
 
